sostituisce le vecchie schermate con i tre piani sui tratti